refact(responsive-fix): Fixes heading sizes on mobile.

--- a/landing/src/assets/scss/landing.scss
+++ b/landing/src/assets/scss/landing.scss
@@ -372,20 +372,6 @@ img {
     }
 }
 
-[google-play-href] .lbl-comming-soon,
-[app-store-href] .lbl-comming-soon {
-    display: block;
-    color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-    font-size: 10px;
-    text-align: center;
-    width: 100%;
-}
-
-[google-play-href] .lbl-comming-soon {
-    margin-top: -9px;
-}
-
 a {
     color: $secondary;
     &:hover {
@@ -616,14 +602,6 @@ a {
 
 .footer-default {
     background-color: whitesmoke;
-}
-
-.footer-dropdown {
-    top: -120px !important;
-    &:before,
-    &:after {
-        top: 300px !important;
-    }
 }
 
 .landing-page {
@@ -1036,5 +1014,20 @@ button.btn-primary {
     }
     .pull-right {
         float: none !important;
+    }
+}
+
+@media (max-width: 400px) {
+    .hero-image {
+        h1 {
+            font-size: 20px;
+        }
+        h3 {
+            font-size: 14px;
+        }
+    }
+    .footer .copyright {
+        margin: 0px;
+        padding: 20px;
     }
 }
